Fix storage of schedules

Fix code to provide prior behavior

BUG: 406082
FIXED-IN: 5.0.4